--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Neptune.Troy.v3</h1>
+      <h1 class="project-name">Neptune.Troy.v3.DEV</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/thepharcyde2016/neptune" class="btn">View on GitHub</a>
       <a href="https://github.com/thepharcyde2016/neptune/zipball/master" class="btn">Download .zip</a>
